fix text overflow

--- a/src/components/Carousel/Location/Location.module.css
+++ b/src/components/Carousel/Location/Location.module.css
@@ -1,5 +1,6 @@
 .slide {
     width: 256px;
+    
     margin-right: 16px;
     border-radius: 8px;
     background-color: white;
@@ -11,6 +12,8 @@
     -moz-transition: left 0.5s ease-in-out, transform 0.1s ease-in-out;
     -o-transition: left 0.5s ease-in-out, transform 0.1s ease-in-out;
     transition: left 0.5s ease-in-out, transform 0.1s ease-in-out;
+
+
 }
 
 .slide:active {
@@ -30,9 +33,11 @@
 
 .locationInfoContainer{
     padding: 8px;
+    width: 100%;
 }
 
 .spotName {
+    width: 240px;
     font-weight: var(--text-weight-bold);
     text-overflow: ellipsis;
     overflow: hidden;
